--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
 // 还原默认样式
 @import './reset.scss';
-// 主体背景色
-@import './variable.scss'
+// 定义了有关css的全局变量
+@import './variables.scss';
+// 定义公共函数
+@import './common.scss';
+// 覆盖element-plus 默认的侧边导航栏样式
+@import './sidebar.scss';
