--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -9,3 +9,16 @@
   transform: translateX(100px);
 }
 
+.fade-enter-active,
+.fade-leave-active{
+  transition: all 0.5s;
+}
+.fade-enter-from{
+  opacity: 0;
+  transform: translateX(-30px);
+  top: 0;
+}
+.fade-leave-to{
+  opacity: 0;
+  transform: translateX(30px);
+}
